test/fail_compilation/traits_alone.d
//used to segfault
__traits
